<resources>
    <string name="app_name">Info Film</string>
    <string name="ini_poster_film">ini poster film</string>
    <string name="judul_film">Judul Film</string>
    <string name="tgl_movie">December 12, 2019</string>
    <string name="btn_detail_movie">Info lainnya</string>
    <string name="background_poster">gambar poster</string>
    <string name="description">Deskripsi</string>
    <string name="date_release">Tanggal tayang</string>
    <string name="inro_movie">inro movie</string>
    <string name="poster_movie">poster film</string>
    <string name="change_language_setting">change language setting</string>

    <!--name menu-->
    <string name="menu_movies_item">Movies</string>
    <string name="menu_tv_shows_item">Tv Shows</string>
    <string name="delete">delete</string>
    <string name="menu_movies_item_favorite">Favorite Movies</string>
    <string name="menu_tv_shows_item_favorite">Favorite Tv</string>
    <string name="btn_favorite">Favorite</string>
    <string name="add_favorite_message">Added to Favorite</string>
    <string name="delete_favorite_message">Deleted</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="my_favorite">My Favorite</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_home">Home</string>
    <string name="appwidget_text">Widget Movie Catalogue</string>
    <string name="add_widget">Add widget</string>
    <string name="text_widget">Movie Cataloque</string>
    <string name="empty_text">Kosong</string>
    <string name="film_favorite">Film Favorit</string>
    <string name="KelasMade">Daftar film favorit</string>
</resources>
