<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_item_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/ini_poster_film"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_aquaman" />

        <TextView
            android:id="@+id/title_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/judul_film"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_movie"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/tgl_movie"
            app:layout_constraintStart_toEndOf="@+id/img_item_movie"
            app:layout_constraintTop_toBottomOf="@+id/title_movie" />

        <RatingBar
            android:id="@+id/rating_movie_item"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:rating="5"
            app:layout_constraintStart_toStartOf="@+id/date_movie"
            app:layout_constraintTop_toBottomOf="@+id/date_movie" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="2dp"
            android:background="@color/colorDelete"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_item_movie"
            app:layout_constraintTop_toBottomOf="@+id/rating_movie_item" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>